<resources>
    <string name="app_name">My Car</string>

    <string name="menu_home_home">Home</string>
    <string name="menu_home_profile">Perfil</string>

    <string name="home_select_options">Selecione o que deseja calcular</string>

    <string name="label_username">SEU NOME</string>
    <string name="label_phone">TELEFONE</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_password">SENHA</string>
    <string name="label_accept_terms">Li e aceitos os termos</string>
    <string name="label_terms">Termos de uso</string>

    <string name="label_create_account">Criar minha conta</string>
    <string name="label_reset_password">Esqueci minha senha</string>

    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Conectar</string>
    <string name="button_create_account">Criar conta</string>
    <string name="button_i_have_account">Já tenho conta</string>

    <string name="login_subtitle">Faça o login para continuar</string>

    <string name="signup_subtitle">Preencha os dados da sua conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_better_fuel_subtitle">Descubra o melhor custo/benefício</string>
    <string name="label_marca">MARCA</string>
    <string name="label_modelo">MODELO</string>
    <string name="label_ano">ANO</string>
    <string name="label_valor">VALOR</string>
    <string name="label_km_gasoline">KM/L GASOLINA</string>
    <string name="label_km_ethanol">KM/L ETANOL</string>
    <string name="label_price_gasoline">Preço Gasolina</string>
    <string name="label_price_ethanol">Preço Álcool</string>
    <string name="label_gas_station">Posto de Gasolina</string>
    <string name="label_average_consumption">Consumo médio</string>
    <string name="label_calculate">Descobrir melhor combustível</string>
    <string name="label_clear">Limpar dados</string>

    <string name="loading_message_processing">Carregando</string>

    <string name="default_notification_channel_id">default</string>
    <string name="default_notification_channel_name">Padrão</string>
    <string name="default_notification_channel_description">Canal padrão de notificações</string>


</resources>
