<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">

    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="48dp" />

            <TextView
                android:id="@+id/tvSubTitleSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_subtitle"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_username" />

                <EditText
                    android:id="@+id/etUserNameSignUp"
                    style="@style/field_edit_text"
                    tools:text="Guilherme" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/etEmailSignUp"
                    style="@style/field_edit_text"
                    tools:text="gmauriciobr@email.com" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_phone" />

                <EditText
                    android:id="@+id/etPhoneSignUp"
                    style="@style/field_edit_text"
                    tools:text="(11) 999999-999" />
            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_password" />

                <EditText
                    android:id="@+id/etPasswordSignUp"
                    style="@style/field_edit_text"
                    android:inputType="textPassword"
                    tools:text="xxxxxx" />
            </LinearLayout>

            <Button
                android:id="@+id/btCreateAccount"
                android:text="@string/button_create_account"
                style="@style/button"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>