<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/btHome"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:src="@drawable/ic_home" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_better_fuel_subtitle"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">


            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_marca" />

                <EditText
                    android:id="@+id/etMarca"
                    style="@style/field_edit_text"
                    tools:text="Volkswagen" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_modelo" />

                <EditText
                    android:id="@+id/etModelo"
                    style="@style/field_edit_text"
                    tools:text="Golf 1.4 TSI Highline" />

            </LinearLayout>

            <LinearLayout style="@style/container_section"/>

            <LinearLayout style="@style/container_edit_text_inline">

                <LinearLayout style="@style/container_edit_text_inline_left">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_ano" />

                    <EditText
                        android:id="@+id/etAno"
                        style="@style/field_edit_text_number"
                        android:maxLength="4"
                        tools:text="2019" />

                </LinearLayout>

                <LinearLayout style="@style/container_edit_text_inline_right">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_valor" />

                    <EditText
                        android:id="@+id/etValor"
                        style="@style/field_edit_text_number"
                        android:maxLength="9999999"
                        tools:text="100000" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/container_section"/>

            <Button
                android:id="@+id/btCalculate"
                style="@style/button"
                android:layout_marginTop="24dp"
                android:text="@string/label_calculate" />

            <TextView
                android:id="@+id/btClear"
                style="@style/link"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/label_clear"
                android:paddingBottom="16dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
