<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/border_set">

        <LinearLayout style="@style/container_recycle_view">

            <TextView
                style="@style/label_edit_text"
                android:text="@string/label_seller" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMarca"
                tools:text="email@email.com" />
        </LinearLayout>

        <LinearLayout style="@style/container_recycle_view">

            <TextView
                style="@style/label_edit_text"
                android:text="@string/label_marca" />

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Volkswagen" />
        </LinearLayout>

        <LinearLayout style="@style/container_recycle_view">

            <TextView
                style="@style/label_edit_text"
                android:text="@string/label_modelo" />

            <TextView
                android:id="@+id/tvModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMarca"
                tools:text="Golf" />

        </LinearLayout>

        <LinearLayout style="@style/container_edit_text_inline">

            <LinearLayout style="@style/container_edit_text_inline_left">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_ano" />

                <TextView
                    android:id="@+id/tvAno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvModelo"
                    tools:text="2022" />

            </LinearLayout>

            <LinearLayout style="@style/container_edit_text_inline_right">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_valor" />

                <TextView
                    android:id="@+id/tvValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAno"
                    tools:text="R$ 210000" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>